JSSidebar: fix no vertical space by adding row gap
This also allow for one single shared place to have that
"margin"

--- a/browser/css/jssidebar.css
+++ b/browser/css/jssidebar.css
@@ -11,6 +11,10 @@ img.sidebar.ui-image {
 	padding: 6px;
 }
 
+.sidebar.ui-grid {
+	row-gap: 8px;
+}
+
 .sidebar .ui-content .unobutton {
 	margin: 0;
 }
